fix horizontal scroll

--- a/projects/demo/src/app/features/components/scroll/scroll.component.scss
+++ b/projects/demo/src/app/features/components/scroll/scroll.component.scss
@@ -2,5 +2,9 @@
   uni-scroll {
     height: 500px;
     max-height: 500px;
+
+    .text-content {
+      width: 150%;
+    }
   }
 }
